tier/manifests/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: exoplanets
  labels:
    app: exoplanets
  annotations:
    description: Defines how to deploy the application server
    template.alpha.openshift.io/wait-for-ready: "true"
    argocd.argoproj.io/sync-wave: "5"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: exoplanets
  strategy:
    type: Recreate
  template:
    metadata:
      name: exoplanets
      labels:
        app: exoplanets
    spec:
      containers:
      - name: exoplanets
        image: quay.io/redhattraining/exoplanets:v1.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 20
          periodSeconds: 30
          timeoutSeconds: 3
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 10
          timeoutSeconds: 3
        resources:
          limits:
            memory: 1Gi
        securityContext:
          privileged: false
          runAsNonRoot: true
          allowPrivilegeEscalation: false
          seccompProfile:
            type: RuntimeDefault
          capabilities:
            drop:
            - ALL
