tier/manifests/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database
  labels:
    app: database
    template: postgresql-ephemeral-template
  annotations:
    description: Defines how to deploy the database server
    template.alpha.openshift.io/wait-for-ready: "true"
    argocd.argoproj.io/sync-wave: "0"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database
  strategy:
    type: Recreate
  template:
    metadata:
      name: database
      labels:
        app: database
    spec:
      containers:
      - name: postgresql
        image: registry.redhat.io/rhel8/postgresql-13
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5432
          protocol: TCP
        livenessProbe:
          exec:
            command:
            - /usr/libexec/check-container
            - --live
          initialDelaySeconds: 120
          timeoutSeconds: 10
        readinessProbe:
          exec:
            command:
            - /usr/libexec/check-container
          initialDelaySeconds: 5
          timeoutSeconds: 1
        resources:
          limits:
            memory: 1Gi
        securityContext:
          privileged: false
          runAsNonRoot: true
          allowPrivilegeEscalation: false
          seccompProfile:
            type: RuntimeDefault
          capabilities:
            drop:
            - ALL
        terminationMessagePath: /dev/termination-log
        volumeMounts:
        - mountPath: /var/lib/pgsql/data
          name: database-data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      volumes:
      - name: database-data
        emptyDir:
          medium: ""
