tier/manifests/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: database
  labels:
    app: database
    template: postgresql-ephemeral-template
  annotations:
    template.openshift.io/expose-uri: postgres://{.spec.clusterIP}:{.spec.ports[?(.name=="postgresql")].port}
    argocd.argoproj.io/sync-wave: "2"
spec:
  type: ClusterIP
  sessionAffinity: None
  selector:
    app: database
  ports:
  - name: postgresql
    nodePort: 0
    port: 5432
    protocol: TCP
    targetPort: 5432
status:
  loadBalancer: {}
